this is working

--- a/service-details.html
+++ b/service-details.html
@@ -73,245 +73,61 @@
     <!-- Services Section -->
     <section id="services" class="services section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-5">
-          <div class="col-lg-8 order-lg-1 order-2">
-            <div class="services-main-content">
-              <div class="service-tabs" data-aos="fade-up" data-aos-delay="200">
-                <ul class="nav nav-tabs" id="serviceTab" role="tablist">
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#service-tab-1" type="button" role="tab" aria-controls="digital-marketing" aria-selected="true">
-                      <i class="bi bi-megaphone"></i> Digital Marketing
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#service-tab-2" type="button" role="tab" aria-controls="graphic-designing" aria-selected="false">
-                      <i class="bi bi-brush"></i> Graphic Designing
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#service-tab-3" type="button" role="tab" aria-controls="web-development" aria-selected="false">
-                      <i class="bi bi-code-slash"></i> Web Development
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button class="nav-link" data-bs-toggle="tab" data-bs-target="#service-tab-4" type="button" role="tab" aria-controls="seo" aria-selected="false">
-                      <i class="bi bi-search"></i> SEO
-                    </button>
-                  </li>
-                </ul>
-
-                <div class="tab-content">
-                  <!-- Digital Marketing -->
-                  <div class="tab-pane fade show active" id="service-tab-1" role="tabpanel" aria-labelledby="digital-marketing-tab">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="content-block">
-                          <h3>Strategic Digital Marketing</h3>
-                          <p>Boost your online presence with our tailored digital marketing strategies, designed to engage your audience and drive results.</p>
-                          <p>We leverage advanced tools and analytics to optimize campaigns across social media, email, and more.</p>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Digital Marketing" class="img-fluid rounded">
-                      </div>
-                    </div>
-                    <div class="process-timeline mt-4">
-                      <div class="timeline-item">
-                        <div class="timeline-marker">01</div>
-                        <div class="timeline-content">
-                          <h4>Research & Planning</h4>
-                          <p>Analyze your market and define a winning strategy.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">02</div>
-                        <div class="timeline-content">
-                          <h4>Campaign Execution</h4>
-                          <p>Deploy targeted ads and content across multiple channels.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">03</div>
-                        <div class="timeline-content">
-                          <h4>Performance Tracking</h4>
-                          <p>Monitor and refine campaigns for maximum ROI.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="benefits mt-4">
-                      <h4>Benefits</h4>
-                      <ul>
-                        <li>Increased brand awareness</li>
-                        <li>Higher engagement rates</li>
-                        <li>Measurable growth in leads</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <!-- Graphic Designing -->
-                  <div class="tab-pane fade" id="service-tab-2" role="tabpanel" aria-labelledby="graphic-designing-tab">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="content-block">
-                          <h3>Creative Graphic Designing</h3>
-                          <p>Transform your brand with stunning visuals crafted by our expert designers.</p>
-                          <p>From logos to marketing materials, we deliver designs that captivate and convert.</p>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <img src="https://plus.unsplash.com/premium_photo-1663100678842-d89cb7b084ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z3JhcGhpY3MlMjBkZXNpZ25pbmd8ZW58MHx8MHx8fDA%3D" alt="Graphic Designing" class="img-fluid rounded">
-                      </div>
-                    </div>
-                    <div class="process-timeline mt-4">
-                      <div class="timeline-item">
-                        <div class="timeline-marker">01</div>
-                        <div class="timeline-content">
-                          <h4>Concept Development</h4>
-                          <p>Brainstorm and sketch initial design ideas.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">02</div>
-                        <div class="timeline-content">
-                          <h4>Design Creation</h4>
-                          <p>Craft high-quality graphics tailored to your brand.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">03</div>
-                        <div class="timeline-content">
-                          <h4>Review & Finalize</h4>
-                          <p>Refine based on feedback for a perfect outcome.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="benefits mt-4">
-                      <h4>Benefits</h4>
-                      <ul>
-                        <li>Unique brand identity</li>
-                        <li>Professional-grade visuals</li>
-                        <li>Enhanced customer appeal</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <!-- Web Development -->
-                  <div class="tab-pane fade" id="service-tab-3" role="tabpanel" aria-labelledby="web-development-tab">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="content-block">
-                          <h3>Innovative Web Development</h3>
-                          <p>Build responsive, high-performance websites with our cutting-edge development services.</p>
-                          <p>We ensure seamless user experiences and robust functionality.</p>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded">
-                      </div>
-                    </div>
-                    <div class="process-timeline mt-4">
-                      <div class="timeline-item">
-                        <div class="timeline-marker">01</div>
-                        <div class="timeline-content">
-                          <h4>Planning & Design</h4>
-                          <p>Outline structure and create wireframes.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">02</div>
-                        <div class="timeline-content">
-                          <h4>Development</h4>
-                          <p>Code and integrate features with modern technologies.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">03</div>
-                        <div class="timeline-content">
-                          <h4>Testing & Launch</h4>
-                          <p>Ensure quality and deploy the site live.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="benefits mt-4">
-                      <h4>Benefits</h4>
-                      <ul>
-                        <li>Responsive design</li>
-                        <li>Improved site performance</li>
-                        <li>Scalable solutions</li>
-                      </ul>
-                    </div>
-                  </div>
-
-                  <!-- SEO -->
-                  <div class="tab-pane fade" id="service-tab-4" role="tabpanel" aria-labelledby="seo-tab">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="content-block">
-                          <h3>Effective SEO Services</h3>
-                          <p>Enhance your search engine rankings with our proven SEO techniques.</p>
-                          <p>We optimize content and technical aspects to drive organic traffic.</p>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <img src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww" alt="SEO" class="img-fluid rounded">
-                      </div>
-                    </div>
-                    <div class="process-timeline mt-4">
-                      <div class="timeline-item">
-                        <div class="timeline-marker">01</div>
-                        <div class="timeline-content">
-                          <h4>Keyword Research</h4>
-                          <p>Identify high-value keywords for your industry.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">02</div>
-                        <div class="timeline-content">
-                          <h4>On-Page Optimization</h4>
-                          <p>Enhance content and meta tags for better ranking.</p>
-                        </div>
-                      </div>
-                      <div class="timeline-item">
-                        <div class="timeline-marker">03</div>
-                        <div class="timeline-content">
-                          <h4>Link Building</h4>
-                          <p>Build authoritative backlinks to boost authority.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="benefits mt-4">
-                      <h4>Benefits</h4>
-                      <ul>
-                        <li>Higher search rankings</li>
-                        <li>Increased organic traffic</li>
-                        <li>Long-term growth</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+        <div class="row gy-4 service-cards-row">
+          <!-- Digital Marketing Card -->
+          <div class="col-lg-3 col-md-6">
+            <div class="service-card">
+              <div class="service-icon"><i class="bi bi-megaphone"></i></div>
+              <h3>Digital Marketing</h3>
+              <img src="https://images.unsplash.com/photo-1557838923-2985c318be48?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZGlnaXRhbCUyMG1hcmtldGluZ3xlbnwwfHwwfHx8MA%3D%3D" alt="Digital Marketing" class="img-fluid rounded mb-3">
+              <p>Boost your online presence with tailored digital marketing strategies, engaging your audience and driving results across social media, email, and more.</p>
+              <!-- <ul class="service-features">
+                <li>Brand Awareness</li>
+                <li>Engagement</li>
+                <li>Lead Generation</li>
+              </ul> -->
             </div>
           </div>
-
-          <div class="col-lg-4 order-lg-2 order-1">
-            <div class="service-sidebar" data-aos="fade-left">
-              <div class="action-card" data-aos="zoom-in" data-aos-delay="100">
-                <h3>Ready to Grow Your Business?</h3>
-                <p>Contact us for a free consultation and tailored solutions.</p>
-                <a href="#contact" class="btn-primary">Get in Touch</a>
-                <span class="guarantee"><i class="bi bi-shield-check"></i> 100% Satisfaction Guaranteed</span>
-              </div>
-
-              <div class="service-features-list" data-aos="fade-up" data-aos-delay="200">
-                <h4>Our Expertise</h4>
-                <ul>
-                  <li><i class="bi bi-megaphone"></i> Digital Marketing</li>
-                  <li><i class="bi bi-brush"></i> Graphic Designing</li>
-                  <li><i code="bi bi-code-slash"></i> Web Development</li>
-                  <li><i class="bi bi-search"></i> SEO</li>
-                </ul>
-              </div>
+          <!-- Graphic Designing Card -->
+          <div class="col-lg-3 col-md-6">
+            <div class="service-card">
+              <div class="service-icon"><i class="bi bi-brush"></i></div>
+              <h3>Graphic Designing</h3>
+              <img src="https://plus.unsplash.com/premium_photo-1663100678842-d89cb7b084ee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Z3JhcGhpY3MlMjBkZXNpZ25pbmd8ZW58MHx8MHx8fDA%3D" alt="Graphic Designing" class="img-fluid rounded mb-3">
+              <p>Transform your brand with stunning visuals, from logos to marketing materials, crafted by our expert designers to captivate and convert.</p>
+              <!-- <ul class="service-features">
+                <li>Brand Identity</li>
+                <li>Professional Visuals</li>
+                <li>Marketing Collateral</li>
+              </ul> -->
+            </div>
+          </div>
+          <!-- Web Development Card -->
+          <div class="col-lg-3 col-md-6">
+            <div class="service-card">
+              <div class="service-icon"><i class="bi bi-code-slash"></i></div>
+              <h3>Web Development</h3>
+              <img src="https://images.unsplash.com/photo-1571171637578-41bc2dd41cd2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHdlYiUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" alt="Web Development" class="img-fluid rounded mb-3">
+              <p>Build responsive, high-performance websites and web apps with seamless user experiences and robust functionality.</p>
+              <!-- <ul class="service-features">
+                <li>Responsive Design</li>
+                <li>Performance</li>
+                <li>Scalability</li>
+              </ul> -->
+            </div>
+          </div>
+          <!-- SEO Card -->
+          <div class="col-lg-3 col-md-6">
+            <div class="service-card">
+              <div class="service-icon"><i class="bi bi-search"></i></div>
+              <h3>Search Engine Optimization</h3>
+              <img src="https://plus.unsplash.com/premium_photo-1683980578016-a1f980719ec2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c2VvfGVufDB8fDB8fHww" alt="SEO" class="img-fluid rounded mb-3">
+              <p>Enhance your search engine rankings and drive organic traffic with proven SEO techniques and content optimization.</p>
+              <!-- <ul class="service-features">
+                <li>Keyword Research</li>
+                <li>On-Page Optimization</li>
+                <li>Link Building</li>
+              </ul> -->
             </div>
           </div>
         </div>
